--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Weissman Replication Experiment</title>
     <link rel="stylesheet" href="style/main.css"/>
     <script src="locale/localization.js"></script>
@@ -10,8 +11,6 @@
     <script type="text/javascript">
         /*
 
-        TODO: Add JSON email as backup for data save error?
-            * Will data security ethics allow emailing participant platform IDs?
         TODO: Localisation strings for CZ, HUN
         TODO: Instruction finalisation
         TODO: Check cross-browser compatability
