Consent form structure update
Updated conset form to match Budapest EC requirements.

EN version now uses token phrases rather than actual ethics form wording.

--- a/index.html
+++ b/index.html
@@ -76,27 +76,24 @@
         </div>
         <div id="Consent" class="instructions hidden">
             <h1>S::g_c_title</h1>
-            <p>S::g_c_about</p>
-            <p>S::g_c_overview</p>
-            <p>S::g_c_content</p>
+            <p>S::g_c_summary</p>
+            <p>S::g_c_data</p>
+            <p>S::g_c_participation</p>
+            <p>S::g_c_contact</p>
+            <p>S::g_c_email_pi</p>
+            <p class="contact-link">S::g_c_email_pi_href</p>
+            <p>S::g_c_email_ec</p>
+            <p class="contact-link">S::g_c_email_ec_href</p>
             <div class="consent-check">
                 <input type="checkbox" onchange="checkConsent()"/>
-                <p>S::g_c_checkbox</p>
+                <p>S::g_c_agree</p>
             </div>
-            <h1>S::g_c_volition</h1>
-            <p>S::g_c_quit</p>
-            <p>S::g_c_compensation</p>
-            <p>S::g_c_incomplete</p>
-            <p>S::g_c_policy</p>
-            <p>S::g_c_confidentiality</p>
-            <p>S::g_c_risks</p>
-            <p>S::g_c_contact</p>
-            <p>S::g_c_email_PI</p>
-            <p class="contact-link"><a href="S::g_c_email_pi_href">S::g_c_email_pi_display</a></p>
-            <p>S::g_c_email_EC</p>
-            <p class="contact-link"><a href="S::g_c_email_ec_href">S::g_c_email_ec_display</a></p>
+
+            <h1>S::g_c_title2</h1>
+            <p>S::g_c_p1</p>
+            <p>S::g_c_p2</p>
             <div class="consent-check">
-                <--input type="checkbox" onchange="checkConsent()"/!-->
+                <input type="checkbox" onchange="checkConsent()"/>
                 <p>S::g_c_agree</p>
             </div>
         </div>
@@ -275,7 +272,7 @@
             <div id="SaveStatus"></div>
             <p>S::g_g_end_detail</p>
             <p>S::g_g_end_contact</p>
-            <p class="contact-link"><a href="S::g_c_email_pi_href">S::g_c_email_pi_display</a></p>
+            <p class="contact-link">S::g_c_email_pi_href</p>
             <div id="Data"></div>
         </div>
         <div id="Error" class="instructions hidden">
