different consent form checkbox text

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p>S::g_c_p2</p>
             <div class="consent-check">
                 <input type="checkbox" onchange="checkConsent()"/>
-                <p>S::g_c_agree</p>
+                <p>S::g_c_agree2</p>
             </div>
         </div>
         <div id="Demographics" class="instructions hidden">
