nonweighted trial type selection
* removed weighting of trials in the trial type selection. Now done using simple randomness.

* the keymap will now display during the practice screen and the countdown.

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
         </div>
         <div id="Practice" class="instructions hidden">
             <h1>S::g_p_title</h1>
+            <div id="PracticeResponseMap"></div>
             <button onclick="runExperiment()">S::g_g_practice</button>
         </div>
         <div id="BlockBreak" class="instructions hidden">
