removed platform selection

--- a/index.html
+++ b/index.html
@@ -252,13 +252,13 @@
                 <div>
                     <input id="DebriefUID" name="userId" type="text" placeholder="S::g_d_uid">
                 </div>
-                <div>
+                <!--<div>
                     <select name="recruitmentPlatform" id="DebriefPlatform">
                         <option value="none">S::g_d_none</option>
                         <option value="hun">S::g_d_hun</option>
                         <option value="cz">S::g_d_cz</option>
                     </select>
-                </div>
+                </div>-->
             </div>
 
             <div>
