--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
                         <div>S::g_f_left_index</div>
                     </div>
                     <div>
-                        <div><kbd>K::j</kbd></div>
+                        <div><kbd>K::n</kbd></div>
                         <div>S::g_s_up</div>
-                        <div>S::g_f_right_middle</div>
+                        <div>S::g_f_right_index</div>
                     </div>
                     <div>
-                        <div><kbd>K::n</kbd></div>
+                        <div><kbd>K::m</kbd></div>
                         <div>S::g_s_down</div>
-                        <div>S::g_f_left_index</div>
+                        <div>S::g_f_right_middle</div>
                     </div>
                 </div>
                 <p>S::p_i_practice</p>
