--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <div>Finger</div>
                         </div>
                         <div>
-                            <div><kbd>K::z</kbd></div>
+                            <div><kbd>K::c</kbd></div>
                             <div>S::g_f_left_middle</div>
                         </div>
                         <div>
