--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                 <p>S::p_i_responses</p>
                 <div class="response-table">
                     <div class="labels">
-                        <div>Response</div>
-                        <div>Stimulus</div>
-                        <div>Finger</div>
+                        <div>S::g_g_response</div>
+                        <div>S::g_g_stimulus</div>
+                        <div>S::g_g_finger</div>
                     </div>
                     <div>
                         <div><kbd>K::f</kbd></div>
@@ -178,8 +178,8 @@
                     <div>I::f_keyboard</div>
                     <div class="response-table">
                         <div class="labels">
-                            <div>Response</div>
-                            <div>Finger</div>
+                            <div>S::g_g_response</div>
+                            <div>S::g_g_finger</div>
                         </div>
                         <div>
                             <div><kbd>K::c</kbd></div>
