--- a/index.html
+++ b/index.html
@@ -232,16 +232,18 @@
         </div>
         <div id="Practice" class="instructions hidden">
             <h1>S::g_p_title</h1>
-            <div id="PracticeResponseMap"></div>
+            <div class="practice-response-map"></div>
             <button onclick="runExperiment()">S::g_g_practice</button>
         </div>
         <div id="BlockBreak" class="instructions hidden">
             <h1>S::g_g_block_end</h1>
             <p>S::g_g_block_break</p>
+            <div class="practice-response-map"></div>
             <button onclick="runTrial()">S::g_g_continue</button>
         </div>
         <div id="EndPractice" class="instructions hidden">
             <h1>S::g_p_end</h1>
+            <div class="practice-response-map"></div>
             <button onclick="runTrial()">S::g_g_continue</button>
         </div>
         <div id="Experiment" class="hidden">
