--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <div>S::g_f_right_index</div>
                     </div>
                     <div>
-                        <div><kbd>K::m</kbd></div>
+                        <div><kbd>K::j</kbd></div>
                         <div>S::g_s_down</div>
                         <div>S::g_f_right_middle</div>
                     </div>
@@ -191,7 +191,7 @@
                         </div>
                         <div>
                             <div><kbd>K::n</kbd></div>
-                            <div>S::g_f_left_index</div>
+                            <div>S::g_f_right_index</div>
                         </div>
                         <div>
                             <div><kbd>K::m</kbd></div>
