keyboard images use localisation

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <p>S::i_i_detail</p>
                 <p>S::i_i_keymap</p>
                 <div class="row">
-                    <img src="assets/simon/Keyboard2.JPG"/>
+                    <div>I::i_keyboard</div>
                 </div>
                 <p>S::i_i_duration</p>
                 <p>S::g_i_accuracy70</p>
@@ -224,7 +224,7 @@
                     <div>I::s_ex2</div>
                 </div>
                 <p>S::s_i_detail</p>
-                <img src="assets/stroop/Keyboard.png"/>
+                <div>I::s_keyboard</div>
                 <p>S::s_i_duration</p>
                 <p>S::g_i_accuracy70</p>
             </div>
